--- a/src/app/foodpage/foodpage.component.html
+++ b/src/app/foodpage/foodpage.component.html
@@ -20,8 +20,8 @@
                 {{origin}}
             </span>
         </div>
-        <div class="tag">
-            <app-tags [foodPageTags]="food.tags"></app-tags>
+        <div class="tags">
+            <app-tags [foodPageTags]="food.tags" justifyContent="start"></app-tags>
         </div>
         <div class="cook-time">
             <span>
@@ -33,5 +33,5 @@
                 {{food.price | currency}}
             </span>
         </div>
-        <button>Add to Cart</button>
+        <button (click)="addToCart()">Add to Cart</button>
     </div>
