--- a/src/app/foodpage/foodpage.component.css
+++ b/src/app/foodpage/foodpage.component.css
@@ -54,3 +54,34 @@
      border-radius: 2rem;
      background-color: aliceblue;
  }
+ .details .cook-time{
+     margin: 1rem;
+
+ }
+ .details .cook-time  span{
+     padding: .6rem;
+     border-radius: 10rem;
+     font-size: 1.3rem;
+ }
+ .details .price{
+     font-size: 1.8rem;
+     margin: 1rem 1rem 1rem 0;
+     color: green;
+ }
+ .details .price::before{
+     content: "Price: ";
+     color: gray;
+ }
+ .details button{
+     color: white;
+     background-color: #e72929;
+     border: none;   
+     font-size: 1.2rem;
+     padding: 1rem;
+     border-radius: 10rem;
+     outline: none;
+ }
+ .details button:hover{
+     opacity: .9;
+     cursor: pointer;
+ }
