--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,7 +4,8 @@ header{
     border-bottom: 1px solid #e72929;
 }
 a{
-    color: #af1313;
+    color: #463636;
+    background-color: #e72929;
 }
 a:hover{
     background-color: #e72929;
@@ -18,10 +19,12 @@ a:hover{
 a.logo{
     font-weight: bold;
     padding: 1em;
+    
 }
 nav ul{
     list-style-type: none;
     margin: 0;
+
 }
 nav ul li a{
     padding: 1em;
